# blog

./: .gitignore  pyproject.toml  wsgi.py
.github/workflows/: lint.yml
blog/: app.py
blog/articles/: views.py
blog/templates/: base.html
blog/templates/articles/: article_detail.html  articles_list.html  welcome.html
blog/templates/users/: user_detail.html  users_list.html
blog/user/: views.py
