[tool.poetry]
name = "flask-blog"
version = "0.1.0"
description = "blog app in flask"
authors = ["juliojm1310 <juliojm1310@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flake8 = "^6.0.0"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
